--- a/news_monitoring/media/story/package.json
+++ b/news_monitoring/media/story/package.json
@@ -17,6 +17,8 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tom-select": "^2.4.3",
     "tslib": "^2.3.0",
