--- a/news_monitoring/media/story/package.json
+++ b/news_monitoring/media/story/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "@popperjs/core": "^2.11.8",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tom-select": "^2.4.3",
